tests/divide_by_0.ppig

func main(): i32
{
    let d = 100 / 0; //error
    return 0;
}
